--- a/blog/templates/blog/lists/links_list.html
+++ b/blog/templates/blog/lists/links_list.html
@@ -1,5 +1,5 @@
 {% for url in urls %}
-  {% if not context.enable_tailwind_flag %}
+  {% if not context.enable_tailwind_flag and context.user.is_authenticated and not context.user.enable_tailwind or not context.enable_tailwind_flag and not context.user.is_authenticated %}
     <li>
       <a class="nav-link" href="{{ url.get_absolute_url }}">{% firstof url.featured_title url.title %}</a>
     </li>
