--- a/links/templates/links/links_list.html
+++ b/links/templates/links/links_list.html
@@ -1,5 +1,5 @@
 {% for url in urls %}
-  {% if not context.enable_tailwind_flag %}
+  {% if not context.enable_tailwind_flag and context.user.is_authenticated and not context.user.enable_tailwind or not context.enable_tailwind_flag and not context.user.is_authenticated %}
     <li>
       <a class="nav-link" href="{% if url.index %}{% firstof url.permalink url.content_object.get_index_view_url %}{% else %}{% firstof url.content_object.get_absolute_url url.get_content_object_url %}{% endif %}">{{ url.title }}</a>
     </li>
