--- a/settings_app/templates/settings_app/side_menu_setting.html
+++ b/settings_app/templates/settings_app/side_menu_setting.html
@@ -12,7 +12,8 @@
           {{ side.sub_title }}
         </p>
 
-        {% fact %}
+        {% comment %} {% endcomment %}
+        {% fact hide_header=False hide_readmore=False %}
       {% endif %}
 
       {% if side.is_user_side_menu %}
