--- a/blog/templates/blog/lists/post_list.html
+++ b/blog/templates/blog/lists/post_list.html
@@ -1,5 +1,5 @@
 {% extends 'blog/base_post.html' %}
-{% load static featured_post offcanvas post_cards comments %}
+{% load static featured_post offcanvas post_cards cards comments %}
 
 {% block page_top %}
   {% if not enable_tailwind_flag and user.is_authenticated and not user.enable_tailwind or not enable_tailwind_flag and not user.is_authenticated %}
@@ -101,52 +101,7 @@
       {% endfor %}
     </section>
   {% elif enable_tailwind_flag or user.is_authenticated and user.enable_tailwind %}
-    <section class="text-gray-400 bg-gray-900 body-font">
-      <section class="container px-5 py-5 mx-auto">
-        <section class="flex flex-wrap -m-4">
-          {% for post in posts %}
-            <article class="p-4 md:w-1/3">
-              <div class="h-full border-2 border-gray-800 rounded-lg overflow-hidden">
-                <section class="p-6">
-                  <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">
-                    {% if post.get_featured_cat %}
-                      <strong>
-                        <a class="cat-link" href="{{ post.get_featured_cat.category.get_absolute_url }}">{{ post.featured_cat_title|upper }}</a>
-                      </strong>
-                    {% else %}
-                      <strong>
-                        <a class="cat-link" href="{{ post.categories.first.get_absolute_url }}">{{ post.categories.first|upper }}</a>
-                      </strong>
-                    {% endif %}
-                  </h2>
-                  <h1 class="title-font text-lg font-medium text-white mb-3">{{ post.title }}</h1>
-                  <p class="leading-relaxed mb-3">{{ post.description }}</p>
-                  <section class="flex items-center flex-wrap ">
-                    <a class="text-purple-400 inline-flex items-center md:mb-2 lg:mb-0" href="{{ post.get_absolute_url }}">Learn More
-                      <svg class="w-4 h-4 ml-2" viewbox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path d="M5 12h14"></path>
-                        <path d="M12 5l7 7-7 7"></path>
-                      </svg>
-                    </a>
-                    <span class="text-gray-500 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-800">
-                      <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewbox="0 0 24 24">
-                        <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
-                        <circle cx="12" cy="12" r="3"></circle>
-                      </svg>{{ post.clicks }}
-                    </span>
-                    {% get_comment_count for post as comment_count %}
-                    <span class="text-gray-500 inline-flex items-center leading-none text-sm">
-                      <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" />
-                      </svg>{{ comment_count }}
-                    </span>
-                  </section>
-                </section>
-              </div>
-            </article>
-          {% endfor %}
-        </section>
-      </section>
-    </section>
+    {% comment %} {% endcomment %}
+    {% include 'tailwind/card_container.html' with object_list=posts %}
   {% endif %}
 {% endblock content_main %}
