--- a/portfolio/templates/portfolio/project_list.html
+++ b/portfolio/templates/portfolio/project_list.html
@@ -1,59 +1,64 @@
 {% extends 'sub_base_main.html' %}
-{% load super_buttons %}
+{% load super_buttons cards %}
 
 {% block main %}
-  {% for project in projects %}
-    {% if project.featured %}
-      <div class="card p-4 mb-2 shadow">
-        <div class="container">
-          <strong class="d-inline-block mb-2 text-uppercase fst-italic">Featured Project</strong>
-          <h1 class="display-4">{{ project.title }}</h1>
-          <p class="lead">{{ project.snippet }}</p>
-          <a class="btn btn-primary" href="{{ project.get_absolute_url }}">Continue reading</a>
-        </div>
-      </div>
-    {% endif %}
-  {% endfor %}
-
-  {% block page_top_hr %}
-    <div class='text-then-hr text-small text-muted'>
-      <span class='hr-title'><span class="me-2">{{ projects.count }}
-          Project{{ projects.count|pluralize:'s' }}</span></span>
-    </div>
-  {% endblock page_top_hr %}
-
-  <div class="row row-cols-1 row-cols-lg-3 me-0">
+  {% if not enable_tailwind_flag and user.is_authenticated and not user.enable_tailwind or not enable_tailwind_flag and not user.is_authenticated %}
     {% for project in projects %}
-      <div class="mb-2 pe-0">
-        <div id="project-{{ project.slug }}" class="card shadow h-100">
-
-          <div class="card-header">
-            <span class="d-flex">
-              <span class="col">
-                <strong class="text-muted">Project #{{ project.id }}</strong>
-                <p class="mb-0 text-small text-muted">Project slug:
-                  {{ project.slug }}</p>
-              </span>
-              <span class="col-auto">
-                {% if user.is_superuser %}
-                  {% sb project %}
-                {% endif %}
-              </span>
-            </span>
-          </div>
-          <div class="card-body">
-            <h3 class="card-title mb-0">{{ project.title }}</h3>
-            <p class="mb-auto">{{ project.snippet }}</p>
-          </div>
-          <div class="card-footer">
-            <span class="d-flex">
-              <span class="col">
-                <a class="card-link" href="{{ project.get_absolute_url }}">See details</a>
-              </span>
-            </span>
+      {% if project.featured %}
+        <div class="card p-4 mb-2 shadow">
+          <div class="container">
+            <strong class="d-inline-block mb-2 text-uppercase fst-italic">Featured Project</strong>
+            <h1 class="display-4">{{ project.title }}</h1>
+            <p class="lead">{{ project.snippet }}</p>
+            <a class="btn btn-primary" href="{{ project.get_absolute_url }}">Continue reading</a>
           </div>
         </div>
-      </div>
+      {% endif %}
     {% endfor %}
-  </div>
+
+    {% block page_top_hr %}
+      <div class='text-then-hr text-small text-muted'>
+        <span class='hr-title'><span class="me-2">{{ projects.count }}
+            Project{{ projects.count|pluralize:'s' }}</span></span>
+      </div>
+    {% endblock page_top_hr %}
+
+    <div class="row row-cols-1 row-cols-lg-3 me-0">
+      {% for project in projects %}
+        <div class="mb-2 pe-0">
+          <div id="project-{{ project.slug }}" class="card shadow h-100">
+
+            <div class="card-header">
+              <span class="d-flex">
+                <span class="col">
+                  <strong class="text-muted">Project #{{ project.id }}</strong>
+                  <p class="mb-0 text-small text-muted">Project slug:
+                    {{ project.slug }}</p>
+                </span>
+                <span class="col-auto">
+                  {% if user.is_superuser %}
+                    {% sb project %}
+                  {% endif %}
+                </span>
+              </span>
+            </div>
+            <div class="card-body">
+              <h3 class="card-title mb-0">{{ project.title }}</h3>
+              <p class="mb-auto">{{ project.snippet }}</p>
+            </div>
+            <div class="card-footer">
+              <span class="d-flex">
+                <span class="col">
+                  <a class="card-link" href="{{ project.get_absolute_url }}">See details</a>
+                </span>
+              </span>
+            </div>
+          </div>
+        </div>
+      {% endfor %}
+    </div>
+  {% elif enable_tailwind_flag or user.is_authenticated and user.enable_tailwind %}
+    {% comment %} {% endcomment %}
+    {% include 'tailwind/card_container.html' with object_list=projects %}
+  {% endif %}
 {% endblock main %}
