--- a/settings_app/templates/settings_app/side_menu_setting.html
+++ b/settings_app/templates/settings_app/side_menu_setting.html
@@ -13,7 +13,7 @@
         </p>
 
         {% comment %} {% endcomment %}
-        {% facts %}
+        {% facts hide_header=False hide_readmore=False %}
       {% endif %}
 
       {% if side.is_user_side_menu %}
