added LogRocket to try

--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -6,6 +6,9 @@
   <head>
     <meta charset="UTF-8"/>
     {% if not debug_flag %}
+      <script src="https://cdn.lr-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
+      <script>window.LogRocket && window.LogRocket.init('dplxvm/khoblog');</script>
+
       {% analytical_head_top %}
 
       <!-- Google Tag Manager -->
