--- a/blog/templates/blog/lists/category_list.html
+++ b/blog/templates/blog/lists/category_list.html
@@ -6,7 +6,7 @@
     <div class="row row-cols-1 row-cols-lg-3 me-0">
       {% for cat in category_list %}
         <div class="mb-2 pe-0">
-          <div id="category-{{ cat.slug }}" class="card shadow h-100">
+          <div id="category-{{ cat.slug }}" class="card shadow h-100{% if user.is_authenticated and user.is_superuser and cat.needs_reviewing %} border-warning{% endif %}">
 
             <div class="card-header">
               <div class="d-flex">
